First setup of the site

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title:            Arno in Zuid-Amerika
 #description:      "Tripje"
 logo:             logo.png
 disqus_shortname: arnot
+disqus_shortname: arnot
 # Assign a default image for your site's header and footer
 default_bg:       Salar-de-Uyuni.jpg
 search:           true
