--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title:            HMFAYSAL
-description:      "Omega: The Coolest Theme for Jekyll"
-logo:             omikron.png
-disqus_shortname: hmfaysal
+title:            Arno in Zuid-Amerika
+#description:      "Tripje"
+#logo:             logo.png
+disqus_shortname: arnot
 # Assign a default image for your site's header and footer
-default_bg:       default_bg.jpg
+default_bg:       Salar-de-Uyuni.jpg
 search:           true
 share:            true
 # Read Time is a calculator tp provide post read-time based on word count. Usage is recommended.
@@ -13,33 +13,32 @@ animated_fins:	  true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-# or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
-# whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-baseurl:          /hmfaysal-omega-theme
+#url:              http://localhost:4000/
+url:              http://arnot.github.io/
 
 # Owner/author information
 owner:
-  name:           Hossain Mohd Faysal
-  avatar:         hmfaysal.jpg
-  email:          hmfaysal@alum.mit.edu
+  name:           Arno Tiemersma
+  avatar:         avatar.jpg
+  email:          arno.tiemersma@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    Hossain Mohammad Faysal is an Electrical Engineer and a Mathematician based in Doha, Qatar. His interests are anything that&#8217;s related to math, from math itself to programming languages to music to physics to engineering to philosophy.
+  #  description:    Hossain Mohammad Faysal is an Electrical Engineer and a Mathematician based in Doha, Qatar. His interests are anything that&#8217;s related to math, from math itself to programming languages to music to physics to engineering to philosophy.
   # Social networking links used in footer. Update and remove as you like.
   # To register at HMFAYSAL SOCIAL, visit http://social.hmfaysal.tk
-  twitter:        hmfaysal
-  facebook:       hmfaysal
-  github:         hmfaysal
-  stackexchange:  https://stackexchange.com/users/3402032/hossain-mohd-faysal
-  linkedin:       
-  instagram:      
-  flickr:         
-  tumblr:         
-  hmfaysalsocial: hmfaysal
+  #twitter:        hmfaysal
+  facebook:       arno.tiemersma
+  #github:         hmfaysal
+  #stackexchange:  https://stackexchange.com/users/3402032/hossain-mohd-faysal
+  linkedin:       arnotiemersma       
+  instagram:      arnot0
+  # flickr:         
+  #tumblr:         
+  #hmfaysalsocial: hmfaysal
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:    https://plus.google.com/u/0/102602916593522619858
-
+  google_plus:    https://plus.google.com/110117058315274567360
+    
 # Analytics and webmaster tools stuff goes here
-google_analytics:   UA-39365944-7
+google_analytics:   UA-45819773-1
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
@@ -51,17 +50,18 @@ links:
     url: /
     external: false
     icon: home
-  - title: <i class="icon-book"></i> Documentation
-    url: /documentation
+#  - title: <i class="icon-book"></i> Documentation
+#    url: /documentation
   - title: Categories
     url: /categories
   - title: Tags
     url: /tags
-  - title: Faysal who?
-    url: /hossain-mohd-faysal
+#  - title: Faysal who?
+#    url: /hossain-mohd-faysal
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+# TODO: Zuid-Amerika/West?
+timezone:    Europe/Amsterdam
 future:      true
 pygments:    true
 markdown:    kramdown
