--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ animated_fins:	  true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:              http://localhost:4000/ #http://arnot.github.io/
+url:              http://arnot.github.io/
 
 # Owner/author information
 owner:
