--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-"',fh'mm,""/title:            Arno in Zuid-Amerika
+title:            Arno in Zuid-Amerika
 #description:      "Tripje"
 logo:             logo.png
 disqus_shortname: arnot
