--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Arno in Zuid-Amerika
 #description:      "Tripje"
-#logo:             logo.png
+logo:             logo.png
 disqus_shortname: arnot
 # Assign a default image for your site's header and footer
 default_bg:       Salar-de-Uyuni.jpg
