--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Arno in Zuid-Amerika
 #description:      "Tripje"
-#logo:             logo.png
+logo:             logo.png
 disqus_shortname: arnot
 # Assign a default image for your site's header and footer
 default_bg:       Salar-de-Uyuni.jpg
@@ -13,7 +13,8 @@ animated_fins:	  true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:              http://arnot.github.io/
+url:              http://arnot.github.io
+#url:              http://localhost:4000
 
 # Owner/author information
 owner:
