--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ animated_fins:    true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-#url:              http://localhost:4000/
-url:              http://arnot.github.io/
+url:              http://localhost:4000/
+#url:              http://arnot.github.io/
 
 # Owner/author information
 owner:
@@ -68,6 +68,7 @@ pygments:    true
 markdown:    kramdown
 paginate:    6
 paginate_path: "page:num"
+excerpt_separator: "<!--more-->"
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title
