--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Arno in Zuid-Amerika
-#description:      "Tripje"
+title:            Arnot
+description:      "In Zuid-Amerika"
 logo:             logo.png
 disqus_shortname: arnot
 disqus_shortname: arnot
@@ -14,7 +14,7 @@ animated_fins:    true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:              http://arnot.github.io
+url:              http://arnot.nl
 #url:              http://localhost:4000
 
 # Owner/author information
