Change config a little, add post Eerste Dag

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Arnot
-description:      "In Zuid-Amerika"
+# description:      "In Zuid-Amerika"
 logo:             logo.png
 disqus_shortname: arnot
 disqus_shortname: arnot
